--- a/app/templates/user/missing.hbs
+++ b/app/templates/user/missing.hbs
@@ -72,8 +72,8 @@
 			</div>
 		</div>
 	{{else}}
-		<div class="card faded">
-			<div class="image">
+		<div class="card">
+			<div class="image faded">
 				<img src={{card.image}} class="pointer" {{action 'addToCollection' card}} />
 			</div>
 			<div class="number">
