User collection & missing: allow manual adding of wantedcards

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -80,6 +80,10 @@ th.format img {
 	margin: 0 15px 0 3px;
 }
 
+.card .number .wanted .notwanted i {
+	color: lightgray;
+}
+
 .card .wanteddecks {
 	visibility: hidden;
 	position: absolute;
