--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -51,19 +51,25 @@
 				<img src={{card.image}} class="pointer" {{action 'addToCollection' card}} />
 			</div>
 			<div class="number">
-				<div class="wanted">
+				<div class="wanted pointer" {{action 'cycleWanted' card}}>
 					{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
 						<span>
-							{{reduce (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
+							{{reduce_number (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
 						</span>
 						<ul class="wanteddecks">
 							{{#each wantedcards as |wantedcard|}}
 								<li>
 									{{wantedcard.number}} <i class="fas fa-heart"></i>
-									{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+									{{#if wantedcard.wanteddeck}}
+										{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+									{{else}}
+										(hors decks)
+									{{/if}}
 								</li>
 							{{/each}}
 						</ul>
+					{{else}}
+						<span class="notwanted"><i class="fas fa-heart"></i></span>
 					{{/with}}
 				</div>
 				<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card}}></i>
@@ -77,19 +83,25 @@
 				<img src={{card.image}} class="pointer" {{action 'addToCollection' card}} />
 			</div>
 			<div class="number">
-				<div class="wanted">
+				<div class="wanted pointer" {{action 'cycleWanted' card}}>
 					{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
 						<span>
-							{{reduce (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
+							{{reduce_number (action "sumWanted") 0 wantedcards}} <i class="fas fa-heart"></i>
 						</span>
 						<ul class="wanteddecks">
 							{{#each wantedcards as |wantedcard|}}
 								<li>
 									{{wantedcard.number}} <i class="fas fa-heart"></i>
-									{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+									{{#if wantedcard.wanteddeck}}
+										{{wantedcard.wanteddeck.deck.cardclass.name_fr}} {{wantedcard.wanteddeck.deck.name}}
+									{{else}}
+										(hors decks)
+									{{/if}}
 								</li>
 							{{/each}}
 						</ul>
+					{{else}}
+						<span class="notwanted"><i class="fas fa-heart"></i></span>
 					{{/with}}
 				</div>
 				<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card}}></i>
