--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -12,12 +12,16 @@
 		<i class="fas fa-times fa-stack-2x" style="color: darkred;"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.stats' model.id title="Stats"}}
-		<i class="fas fa-percent pointer fa-2x"></i>
+	{{#link-to 'user.wanted' model.id title="Recherchées"}}
+		<i class="fas fa-heart pointer fa-2x"></i>
 	{{/link-to}}
 
 	{{#link-to 'user.decks' model.id title="Decks"}}
 		<i class="fas fa-layer-group pointer fa-2x"></i>
+	{{/link-to}}
+
+	{{#link-to 'user.stats' model.id title="Stats"}}
+		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
 </div>
 
