--- a/app/templates/user/decks.hbs
+++ b/app/templates/user/decks.hbs
@@ -1,3 +1,30 @@
+<h3>Légende</h3>
+<table>
+	<tr class="decks">
+		<td class='rarity-Commune'>Commune</td>
+		<td class='rarity-Rare'>Rare</td>
+		<td class='rarity-Epique'>Epique</td>
+		<td class='rarity-Légendaire'>Légendaire</td>
+	</tr>
+</table>
+<table>
+	<tr class="decks">
+		<td class='cardclass'>Carte de classe</td>
+		<td>Carte neutre</td>
+	</tr>
+</table>
+<table>
+	<tr class="decks">
+		<td class='owned'>Possédée</td>
+		<td class='cardset-Classique'>A obtenir du set Classique</td>
+		<td class='cardset-current'>A obtenir de l'extension courante</td>
+		<td class='cardset-year'>A obtenir d'une extension de l'année en cours</td>
+		<td>A obtenir d'une extension des années précédentes</td>
+	</tr>
+</table>
+
+<br/>
+
 <table>
 	{{#each model.deckgroups as |deckgroup|}}
 		<tr>
@@ -55,12 +82,12 @@
 								{{#with (filter (action "filterOwned") card.collections) as |collections|}}
 									<tr><td class={{if (gte collections.firstObject.number deckcard.number) 'owned' (concat 'cardset-' card.cardset.class)}}>
 										{{min collections.firstObject.number deckcard.number}}/{{deckcard.number}}
-										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
+										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}} title={{card.cardset.name_fr}}>{{card.name_fr}}</span>
 									</td></tr>
 								{{else}}
 									<tr><td class={{concat 'cardset-' card.cardset.class}}>
 										0/{{deckcard.number}}
-										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
+										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}} title={{card.cardset.name_fr}}>{{card.name_fr}}</span>
 									</td></tr>
 								{{/with}}
 							{{/with}}
