--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -16,6 +16,10 @@
 		<i class="fas fa-heart pointer fa-2x"></i>
 	{{/link-to}}
 
+	{{#link-to 'user.extra' model.id title="Recherchées"}}
+		<i class="fas fa-flask pointer fa-2x"></i>
+	{{/link-to}}
+
 	{{#link-to 'user.decks' model.id title="Decks"}}
 		<i class="fas fa-layer-group pointer fa-2x"></i>
 	{{/link-to}}
