Sort cards by cardclass first

--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -16,7 +16,7 @@
 		<i class="fas fa-heart pointer fa-2x"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.extra' model.id title="Recherchées"}}
+	{{#link-to 'user.extra' model.id title="Surnuméraires"}}
 		<i class="fas fa-flask pointer fa-2x"></i>
 	{{/link-to}}
 
