--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -33,7 +33,7 @@
 					{{#if (or (not standard) set.standard)}}
 						{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
 							<td class="stat1">
-								{{#link-to 'user.missing' model.user.id (query-params cardset=set.id rarity=rarity.id)}}
+								{{#link-to 'user.collection' model.user.id (query-params cardset=set.id rarity=rarity.id own='missing')}}
 									{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
 								{{/link-to}}
 							</td>
@@ -45,7 +45,7 @@
 					{{/if}}
 				{{/each}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
 						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -62,7 +62,7 @@
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
 					<th class="stat1">
-						{{#link-to 'user.missing' model.user.id (query-params cardset=set.id)}}
+						{{#link-to 'user.collection' model.user.id (query-params cardset=set.id own='missing')}}
 							{{get (get total.cardsets set.id) "owned"}}
 						{{/link-to}}
 					</th>
@@ -71,7 +71,7 @@
 				{{/if}}
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.missing' model.user.id}}
+				{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
 					{{if standard total.owned_std total.owned}}
 				{{/link-to}}
 			</th>
@@ -115,7 +115,7 @@
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardclasses as |cardclass|}}
 					<td class="stat1">
-						{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id rarity=rarity.id)}}
+						{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id rarity=rarity.id own='missing')}}
 							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "owned_std" "owned")}}
 						{{/link-to}}
 					</td>
@@ -123,7 +123,7 @@
 					<td class="stat3">{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}</td>
 				{{/each}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
 						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -139,7 +139,7 @@
 			<th>TOTAL</th>
 			{{#each model.cardclasses as |cardclass|}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id own='missing')}}
 						{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -147,7 +147,7 @@
 				<th class="stat3">{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}</th>
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.missing' model.user.id}}
+				{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
 					{{if standard total.owned_std total.owned}}
 				{{/link-to}}
 			</th>
@@ -204,7 +204,7 @@
 					{{#if (or (not standard) set.standard)}}
 						{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
 							<td class="stat1">
-								{{#link-to 'user.missing' model.user.id (query-params cardset=set.id rarity=rarity.id)}}
+								{{#link-to 'user.collection' model.user.id (query-params cardset=set.id rarity=rarity.id own='missing')}}
 									{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
 								{{/link-to}}
 							</td>
@@ -216,7 +216,7 @@
 					{{/if}}
 				{{/each}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
 						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -233,7 +233,7 @@
 			{{#each model.cardsets as |set|}}
 				{{#if (or (not standard) set.standard)}}
 					<th class="stat1">
-						{{#link-to 'user.missing' model.user.id (query-params cardset=set.id)}}
+						{{#link-to 'user.collection' model.user.id (query-params cardset=set.id own='missing')}}
 							{{get (get total.cardsets set.id) "owned"}}
 						{{/link-to}}
 					</th>
@@ -242,7 +242,7 @@
 				{{/if}}
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.missing' model.user.id}}
+				{{#link-to 'user.collection' model.user.id own='missing'}}
 					{{if standard total.owned_std total.owned}}
 				{{/link-to}}
 			</th>
@@ -286,7 +286,7 @@
 				<th>{{rarity.name_fr}}</th>
 				{{#each model.cardclasses as |cardclass|}}
 					<td class="stat1">
-						{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id rarity=rarity.id)}}
+						{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id rarity=rarity.id own='missing')}}
 							{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "owned_std" "owned")}}
 						{{/link-to}}
 					</td>
@@ -294,7 +294,7 @@
 					<td class="stat3">{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) (if standard "total_std" "total")}}</td>
 				{{/each}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params rarity=rarity.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
 						{{get (get total.rarities rarity.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -310,7 +310,7 @@
 			<th>TOTAL</th>
 			{{#each model.cardclasses as |cardclass|}}
 				<th class="stat1">
-					{{#link-to 'user.missing' model.user.id (query-params class=cardclass.id)}}
+					{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id own='missing')}}
 						{{get (get total.cardclasses cardclass.id) (if standard "owned_std" "owned")}}
 					{{/link-to}}
 				</th>
@@ -318,7 +318,7 @@
 				<th class="stat3">{{get (get total.cardclasses cardclass.id) (if standard "total_std" "total")}}</th>
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.missing' model.user.id}}
+				{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
 					{{if standard total.owned_std total.owned}}
 				{{/link-to}}
 			</th>
