--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -59,6 +59,17 @@ th.format img {
 	margin-bottom: 20px;
 }
 
+.card .image {
+	position: relative;
+	z-index: 2;
+}
+.card .image:hover .cardinfo {
+	visibility: visible;
+}
+.card .cardinfo .cardset {
+	margin-top: 50px;
+}
+
 .card .number {
 	text-align: center;
 	margin-top: -40px;
@@ -66,7 +77,7 @@ th.format img {
 	font-weight: bold;
 	font-size: 24px;
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 }
 
 .card .number i {
@@ -252,7 +263,7 @@ th.cardclass {
 .cardinfo {
 	visibility: hidden;
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	width: 256px;
 	top: 80%;
 	left: 50%;
