User stats: minor fixes

--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -106,7 +106,7 @@
 						<div class="more">
 							<table>
 								<tr>
-									<th></th>
+									<th class="noborder"></th>
 									<th>Exactement</th>
 									<th>Au moins</th>
 								</tr>
