--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -92,9 +92,18 @@
 						<span class="notwanted"><i class="fas fa-heart"></i></span>
 					{{/with}}
 				</div>
-				<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card}}></i>
-				{{collection.firstObject.number}}
+				{{#if (gt collection.firstObject.number collection.firstObject.golden)}}
+					<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card}}></i>
+					{{sub collection.firstObject.number collection.firstObject.golden}}
+				{{/if}}
 				<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card}}></i>
+				<div class="golden">
+					{{#if (gt collection.firstObject.golden 0)}}
+						<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card true}}></i>
+						{{collection.firstObject.golden}}
+					{{/if}}
+					<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card true}}></i>
+				</div>
 			</div>
 		</div>
 	{{else}}
@@ -130,6 +139,9 @@
 					{{/with}}
 				</div>
 				<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card}}></i>
+				<div class="golden">
+					<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card true}}></i>
+				</div>
 			</div>
 		</div>
 	{{/with}}
