User decks: show complete decks

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -266,6 +266,9 @@ th.cardclass {
 .decks td.cardset-current {
 	background-color: blanchedalmond;
 }
+.complete {
+	background-color: #d0f0d0;
+}
 
 .deckcard {
 	position: relative;
